--- a/galaxyBook/package.json
+++ b/galaxyBook/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.25.0"
   },
   "devDependencies": {
