[#6] BE feat 사용자도서 검색 기능 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=woojoobook
 
 spring.profiles.include=auth
+spring.config.import=classpath:constants.properties
 
 spring.h2.console.enabled=true
 
