--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^5.16.4",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "jwt-decode": "^4.0.0",
@@ -18,7 +20,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-pro-sidebar": "^1.1.0",
-    "react-router-dom": "^6.25.0"
+    "react-router-dom": "^6.25.0",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
