--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,18 @@ spring.config.import=classpath:constants.properties
 spring.h2.console.enabled=true
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+# [jpa property]
+#spring.jpa.properties.hibernate.show_sql=false
+#spring.jpa.properties.hibernate.generate-ddl=false
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# [datasource property]
+#database.url=jdbc:mysql://${MASTER_DATASOURCE_URL}:${PORT}/${SCHEMA_NAME}?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+#database.username=${DATASOURCE_USERNAME}
+#database.password=${DATASOURCE_PASSWORD}
+#database.slave.slave1.name=slave
+#database.slave.slave1.url=jdbc:mysql://${SLAVE_DATASOURCE_URL}:${PORT}/${SCHEMA_NAME}?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+#database.slave.slave1.username=${DATASOURCE_USERNAME}
+#database.slave.slave1.password=${DATASOURCE_PASSWORD}
