--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 
 	// db
 	runtimeOnly 'com.h2database:h2'
+	implementation 'com.mysql:mysql-connector-j:8.3.0'
 
 	// websocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
