--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=woojoobook
 spring.profiles.include=auth
 spring.config.import=classpath:constants.properties
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
