--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "jwt-decode": "^4.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
