--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-pro-sidebar": "^1.1.0",
