[#112] fix: 레디스 내장 충돌 해결

--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,6 @@ dependencies {
 
     // redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    implementation 'com.github.codemonstur:embedded-redis:1.4.3'
 
     // lombok
     compileOnly 'org.projectlombok:lombok'
@@ -82,6 +81,7 @@ dependencies {
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'com.github.codemonstur:embedded-redis:1.4.3'
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
