--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "jwt-decode": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
