--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,34 @@ spring.profiles.include=auth
 spring.config.import=classpath:constants.properties
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+# Naver API
+api.naver.baseUrl=https://openapi.naver.com
+api.naver.timeout=2000
+# Aladin API
+api.aladin.baseUrl=http://www.aladin.co.kr
+api.aladin.timeout=2000
+# Naver API Credentials
+naver-client-key=
+naver-client-secret=
+# Aladin API Credentials
+aladin-client-ttbkey=
+# Resilience4j Circuit Breaker Configuration
+resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
+resilience4j.circuitbreaker.configs.default.failureRateThreshold=50
+resilience4j.circuitbreaker.configs.default.slowCallRateThreshold=80
+resilience4j.circuitbreaker.configs.default.slowCallDurationThreshold=2000ms
+resilience4j.circuitbreaker.configs.default.recordExceptions[0]=java.io.IOException
+resilience4j.circuitbreaker.configs.default.recordExceptions[1]=java.util.concurrent.TimeoutException
+resilience4j.circuitbreaker.configs.default.automaticTransitionFromOpenToHalfOpenEnabled=false
+# Resilience4j Circuit Breaker Instances - Naver API
+resilience4j.circuitbreaker.instances.naver-api-client.minimumNumberOfCalls=10
+resilience4j.circuitbreaker.instances.naver-api-client.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.naver-api-client.slidingWindowType=TIME_BASED
+resilience4j.circuitbreaker.instances.naver-api-client.waitDurationInOpenState=200ms
+resilience4j.circuitbreaker.instances.naver-api-client.permittedNumberOfCallsInHalfOpenState=3
+# Resilience4j Circuit Breaker Instances - Aladin API
+resilience4j.circuitbreaker.instances.aladin-api-client.minimumNumberOfCalls=20
+resilience4j.circuitbreaker.instances.aladin-api-client.slidingWindowSize=30
+resilience4j.circuitbreaker.instances.aladin-api-client.slidingWindowType=TIME_BASED
+resilience4j.circuitbreaker.instances.aladin-api-client.waitDurationInOpenState=1000ms
+resilience4j.circuitbreaker.instances.aladin-api-client.permittedNumberOfCallsInHalfOpenState=10
