--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,12 @@ resilience4j.circuitbreaker.instances.aladin-api-client.slidingWindowSize=30
 resilience4j.circuitbreaker.instances.aladin-api-client.slidingWindowType=TIME_BASED
 resilience4j.circuitbreaker.instances.aladin-api-client.waitDurationInOpenState=1000ms
 resilience4j.circuitbreaker.instances.aladin-api-client.permittedNumberOfCallsInHalfOpenState=10
+#actuator
+management.server.port=8081
+management.health.circuitbreakers.enabled=true
+management.health.mail.enabled=false
+management.info.java.enabled=true
+management.info.os.enabled=true
+management.metrics.enable.resilience4j.circuitbreaker.calls=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
