--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "sonar": "sonar-scanner"
+    "sonar": "sonar-scanner",
+    "test": "jest"
   },
   "dependencies": {
     "@mui/material": "^5.16.4",
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "jest": "^29.7.0",
     "jwt-decode": "^4.0.0",
     "lodash.debounce": "^4.0.8",
     "normalize.css": "^8.0.1",
