--- a/build.gradle
+++ b/build.gradle
@@ -202,8 +202,13 @@ jacocoTestCoverageVerification {
                 maximum = 300
             }
 
-            // 커버리지 체크를 제외할 클래스들
-            excludes = []
+            excludes = [
+                    "*.config.*",
+                    "*.request.*",
+                    "*.response.*",
+                    "*.common.*",
+                    "*Application*"
+            ]
         }
     }
 }
